[tool.poetry]
name = "tutorfile"
version = "0.1.0"
description = "A library for generating interactive tutorials using AI"
authors = ["Carl Byers"]
readme = "README.md"
license = "MIT"
packages = [{include = "tutorfile", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
